Update hero loop diagram labels

--- a/index-codex.html
+++ b/index-codex.html
@@ -397,8 +397,7 @@ td:last-child, th:last-child { text-align: right; }
 
   <!-- Loopback path: right of EVOLVE → up → over → down → left of PLAN -->
   <path d="M660 86 L672 86 Q684 86 684 70 L684 34 Q684 20 672 20 L28 20 Q16 20 16 34 L16 70 Q16 86 28 86 L40 86" stroke="#2a3040" stroke-width="2" stroke-dasharray="6 4" fill="none"/>
-  <rect x="270" y="13" width="160" height="14" rx="3" fill="#12151b"/>
-  <text x="350" y="24" text-anchor="middle" fill="#5c6078" font-family="JetBrains Mono, monospace" font-size="9" letter-spacing="0.15em">REPEAT UNTIL DONE</text>
+  
 
   <!-- Connection arrows (4 solid colored arrows between 5 boxes) -->
   <path d="M140 86 L158 86" stroke="#4af0c0" stroke-width="2"/>
@@ -415,9 +414,9 @@ td:last-child, th:last-child { text-align: right; }
   <text x="90" y="82" text-anchor="middle" fill="#4af0c0" font-family="JetBrains Mono, monospace" font-size="12" letter-spacing="0.1em">PLAN</text>
   <text x="90" y="101" text-anchor="middle" fill="#8b8fa3" font-family="DM Sans, sans-serif" font-size="9">plan.md</text>
 
-  <!-- Box 2: EXECUTE — x=170, w=100, center=220 -->
+  <!-- Box 2: BUILD — x=170, w=100, center=220 -->
   <rect x="170" y="54" width="100" height="64" rx="10" fill="#1e2330" stroke="#4a9cf0" stroke-width="1.5"/>
-  <text x="220" y="82" text-anchor="middle" fill="#4a9cf0" font-family="JetBrains Mono, monospace" font-size="12" letter-spacing="0.1em">EXECUTE</text>
+  <text x="220" y="82" text-anchor="middle" fill="#4a9cf0" font-family="JetBrains Mono, monospace" font-size="12" letter-spacing="0.1em">BUILD</text>
   <text x="220" y="101" text-anchor="middle" fill="#8b8fa3" font-family="DM Sans, sans-serif" font-size="9">checklist.yaml</text>
 
   <!-- Box 3: VERIFY — x=300, w=100, center=350 -->
@@ -430,8 +429,8 @@ td:last-child, th:last-child { text-align: right; }
   <text x="480" y="82" text-anchor="middle" fill="#f06478" font-family="JetBrains Mono, monospace" font-size="12" letter-spacing="0.1em">AUDIT</text>
   <text x="480" y="101" text-anchor="middle" fill="#8b8fa3" font-family="DM Sans, sans-serif" font-size="9">run-log.md</text>
 
-  <!-- Box 5: EVOLVE — x=560, w=100, center=610, dashed border (meta-step) -->
-  <rect x="560" y="54" width="100" height="64" rx="10" fill="#1e2330" stroke="#9b6ef0" stroke-width="1.5" stroke-dasharray="4 3"/>
+  <!-- Box 5: EVOLVE — x=560, w=100, center=610 -->
+  <rect x="560" y="54" width="100" height="64" rx="10" fill="#1e2330" stroke="#9b6ef0" stroke-width="1.5"/>
   <text x="610" y="82" text-anchor="middle" fill="#9b6ef0" font-family="JetBrains Mono, monospace" font-size="12" letter-spacing="0.1em">EVOLVE</text>
   <text x="610" y="101" text-anchor="middle" fill="#8b8fa3" font-family="DM Sans, sans-serif" font-size="9">skills &amp; evals</text>
 
