--- a/index-codex.html
+++ b/index-codex.html
@@ -418,6 +418,11 @@ td:last-child, th:last-child { text-align: right; }
 
 /* ── HIGHLIGHT.JS ── */
 pre code.hljs { display: block; }
+pre code.hljs {
+  background: transparent !important;
+  padding: 0 !important;
+  color: var(--text);
+}
 .hljs-comment { color: var(--text-dim); }
 .hljs-quote { color: var(--text-dim); }
 .hljs-keyword, .hljs-selector-tag, .hljs-literal { color: var(--violet); }
