Update cover subtitle and author line

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
 }
 .cover-meta a { color: var(--text-muted); border-bottom-color: rgba(255,255,255,.14); }
 .cover-meta a:hover { color: var(--accent); border-bottom-color: var(--accent); }
-.cover-author { display: inline-block; margin-top: .65rem; }
+.cover-author { display: inline-block; }
 .cover-updated { display: inline-block; margin-top: .4rem; color: var(--text-dim); }
 .cover-scroll {
   position: absolute; bottom: 2.5rem; left: 50%; transform: translateX(-50%);
@@ -446,8 +446,8 @@ pre code.hljs {
   <div class="cover-grid"></div>
   <div class="cover-label">February 2026</div>
   <h1>Long-Running <em>Agents</em></h1>
-  <p class="cover-sub">An operating model for handing off real engineering work to autonomous coding agents&mdash;and shipping the result safely.</p>
-  <p class="cover-meta">Relentless, observable &amp; self-improving agents.<br><span class="cover-author">Nayeem Zen &middot; <a href="https://x.com/nayeemzen">x: @nayeemzen</a> &middot; <a href="https://www.linkedin.com/in/nayeemzen">linkedin: linkedin.com/in/nayeemzen</a></span><br><span class="cover-updated">Last updated &middot; 2026-02-24</span></p>
+  <p class="cover-sub">A structured playbook of insights and best practices for relentless, self-improving, observable agents tackling complex work.</p>
+  <p class="cover-meta"><span class="cover-author">Nayeem Zen &middot; <a href="https://x.com/nayeemzen">x: @nayeemzen</a> &middot; <a href="https://www.linkedin.com/in/nayeemzen">linkedin: linkedin.com/in/nayeemzen</a></span><br><span class="cover-updated">Last updated &middot; 2026-02-24</span></p>
   <div class="cover-scroll">
     <span>Scroll</span>
     <div class="arrow"></div>
