Refine cover subtitle

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ pre code.hljs {
   <div class="cover-grid"></div>
   <div class="cover-label">February 2026</div>
   <h1>Long-Running <em>Agents</em></h1>
-  <p class="cover-sub">A structured playbook of insights and best practices for relentless, self-improving, observable agents tackling complex work.</p>
+  <p class="cover-sub">A practical handbook of principles and lessons for operating autonomous, long-running, self-improving agents on complex tasks.</p>
   <p class="cover-meta"><span class="cover-author">Nayeem Zen &middot; <a href="https://x.com/nayeemzen">@nayeemzen</a> &middot; <a href="https://www.linkedin.com/in/nayeemzen">linkedin.com/in/nayeemzen</a></span><br><span class="cover-updated">Last updated &middot; 2026-02-24</span></p>
   <div class="cover-scroll">
     <span>Scroll</span>
