Remove cover last-updated line

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@ body {
 .cover-meta a { color: var(--text-muted); border-bottom-color: rgba(255,255,255,.14); }
 .cover-meta a:hover { color: var(--accent); border-bottom-color: var(--accent); }
 .cover-author { display: inline-block; }
-.cover-updated { display: inline-block; margin-top: .4rem; color: var(--text-dim); }
 .cover-scroll {
   position: absolute; bottom: 2.5rem; left: 50%; transform: translateX(-50%);
   display: flex; flex-direction: column; align-items: center; gap: .5rem;
@@ -447,7 +446,7 @@ pre code.hljs {
   <div class="cover-label">February 2026</div>
   <h1>Long-Running <em>Agents</em></h1>
   <p class="cover-sub">A practical handbook of principles and lessons for operating autonomous, long-running, self-improving agents on complex tasks.</p>
-  <p class="cover-meta"><span class="cover-author">Nayeem Zen &middot; <a href="https://x.com/nayeemzen">@nayeemzen</a> &middot; <a href="https://www.linkedin.com/in/nayeemzen">linkedin.com/in/nayeemzen</a></span><br><span class="cover-updated">Last updated &middot; 2026-02-24</span></p>
+  <p class="cover-meta"><span class="cover-author">Nayeem Zen &middot; <a href="https://x.com/nayeemzen">@nayeemzen</a> &middot; <a href="https://www.linkedin.com/in/nayeemzen">linkedin.com/in/nayeemzen</a></span></p>
   <div class="cover-scroll">
     <span>Scroll</span>
     <div class="arrow"></div>
