Prevent glossary cards splitting in PDF

--- a/long-running-agents/index.html
+++ b/long-running-agents/index.html
@@ -407,7 +407,7 @@ td:last-child, th:last-child { text-align: right; }
   h2, h3, h4 { break-after: avoid; }
   p { orphans: 3; widows: 3; }
 
-  .diagnosis, .key-points, .callout, .table-wrap, pre, .illustration, .flow, figure.media {
+  .diagnosis, .key-points, .callout, .table-wrap, pre, .illustration, .flow, figure.media, .glossary-item {
     page-break-inside: avoid;
   }
 
